updates Robs page
added code and data for personalities tables

--- a/Robert_Longmore.html
+++ b/Robert_Longmore.html
@@ -89,6 +89,31 @@
        
     <p>Born in 1974, Robert is the oldest in the group. He was in high school to witness the birth of what would become the internet. Although this fostered a lifelong interest in information technologies, Rob has a love for aviation. He comes to this group with over 30 years’ experience as an Aircraft structural Engineer, Pilot, and Flying instructor. Although his career has been aviation focussed, he has never lost interest in the IT industry, and is an avid gamer and enjoys keeping up with developments in tech and the IT industry. Although his experience is limited to the user level and experience, he is keen to learn a lot more, and be an active participant in the IT industry. Via Robs studies into IT at RMIT, he hopes to never lose that sense of wonder that the IT industry has provided and will develop into and be an active part in IT’s role in its future.</p>
     <hr>
+<h4>Personality</h4>
+
+    <table>
+        <tr>
+          <th>Myers-Briggs</th>
+          <th>Learning style</th>
+          <th>Other Choice</th>
+        </tr>
+        <tr>
+          <td>ISFP-A </td>
+          <td>Auditory 20%<br>
+            Visual 70%<br>  
+            Tactile 10% </td>
+          <td>Big five:<br>
+            Introverted – 76%<br>
+            Observant – 54% <br>
+            Feeling – 56%<br>
+            Prospecting – 69%<br>           
+            Assertive – 71%<br>            
+            Strategy Confident individualism </td>
+        </tr>
+     
+      </table>
+<hr>
+
 </div>
 
 </body>
