updates Adams page
added personalities table

--- a/Adam_puckeridge.html
+++ b/Adam_puckeridge.html
@@ -88,6 +88,56 @@
     <p>Adam was born in Australia and grew up in the Sutherland Shire, Sydney. In 2017, Adam moved to Blayney in New South Wales’ Central West. Adam’s first passion is music - playing the guitar and drums - with anything related to technology being a close second. Adam currently works full time as a salesperson with Toyota and is studying because they would like to work in a field they enjoy. </p>
     </body>
     <hr>
+
+    <h4>Personality</h4>
+
+    <table>
+        <tr>
+          <th>Myers-Briggs</th>
+          <th>Learning style</th>
+          <th>Other Choice</th>
+        </tr>
+        <tr>
+          <td>INFP-A </td>
+          <td>Pragmatist – 50% <br>
+            Activist – 26% <br>  
+            Reflector – 16% <br>
+            Theorist – 8% </td>
+          <td>Extroversion: 3 <br>
+            Emotional Stability: 98 <br>
+            Agreeableness: 67 <br>
+            Conscientiousness: 46 <br>
+            Intellect/Imagination: 8<br>           
+             </td>
+        </tr>
+     
+      </table>
+<hr>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 </div>
  <!--footer-->
 <footer>
