Updates Aiden's page
added and coded personality table.

--- a/Aiden_howlett.html
+++ b/Aiden_howlett.html
@@ -93,6 +93,37 @@
     <p>Born in Canberra and raised in both Sydney and Canberra, Aiden has always had a passion for technology and media. He’s completed 4 Certificate IV courses at TAFE NSW and worked in a helpdesk position up until recently. Also, he has played the original augmented reality game from Niantic, Ingress, since 2016 and now plays a key part in bringing the game’s community together. </p>
 </body>
 <hr>
+
+<h4>Personality</h4>
+
+    <table>
+        <tr>
+          <th>Myers-Briggs</th>
+          <th>Learning style</th>
+          <th>Other Choice</th>
+        </tr>
+        <tr>
+          <td>INTJ-T </td>
+          <td>Visual – 7<br>
+            Aural – 15<br>  
+            Read/Write – 9 <br>
+            Kinaesthetic - 13 </td>
+          <td>Creativity score: 52.37 <br>             
+           </td>
+        </tr>
+     
+      </table>
+<hr>
+
+
+
+
+
+
+
+
+
+
 </div>
 <!--footer-->
 <footer>
