updates Helens page
added personalities code and data

--- a/Helen_Andrews.html
+++ b/Helen_Andrews.html
@@ -90,6 +90,30 @@
     <p>From Launceston, Tasmania, Helen works as a System Administrator for a Tasmanian owned health fund and being exposed to new technologies in the field has sparked her interest in IT. When it's cold outside, you will find Helen indoors playing video games and studying</p>
 </body>
 <hr>
+<h4>Personality</h4>
+
+    <table>
+        <tr>
+          <th>Myers-Briggs</th>
+          <th>Learning style</th>
+          <th>Other Choice</th>
+        </tr>
+        <tr>
+          <td>ISFJ-T </td>
+          <td>Visual Learner <br>
+            </td>
+          <td>Big five:<br>
+            Extraversion: Medium <br>
+            Agreeableness: Medium <br>
+            Conscientiousness: Medium <br>
+            Neuroticism: Medium <br>           
+            Openness: Medium <br>            
+             </td>
+        </tr>
+     
+      </table>
+<hr>
+
 </div>
 <!--footer-->
 <footer>
