updates Josh's page
coded and added personalities data

--- a/Joshua_McCorkell.html
+++ b/Joshua_McCorkell.html
@@ -88,6 +88,31 @@
     <p>Joshua is a 16-year-old from Hervey Bay, Queensland. He has been home-schooled for almost 5 years and is currently transitioning to university studies. Joshua’s main experience in IT is in computer programming - being capable of working with Java and Python - and has been mostly self-taught up to this point. In his spare time, Joshua enjoys chess and basketball. .</p>
 </body>
 <hr>
+
+<h4>Personality</h4>
+
+    <table>
+        <tr>
+          <th>Myers-Briggs</th>
+          <th>Learning style</th>
+          <th>Other Choice</th>
+        </tr>
+        <tr>
+          <td>INTJ-A </td>
+          <td>Visual Learner <br>
+            </td>
+          <td>Big five:<br>
+            Extraversion: Medium <br>
+            Agreeableness: Medium <br>
+            Conscientiousness: Low-Medium <br>
+            Neuroticism: Medium <br>           
+            Openness: Low <br>            
+             </td>
+        </tr>
+     
+      </table>
+<hr>
+
 </div>
 <!--footer-->
 <footer>
