updates IT work.
lots to do.

--- a/IT_work.html
+++ b/IT_work.html
@@ -71,7 +71,16 @@
     <div class = "main-text">
         <h2>IT Work</h2>
     <h3>Interview with an IT Professional. </h3><hr>
-    <p>Sally Longmore, Team Lead of Digital Product, Woolworths.</p>
+    <p>We have chosen as a group to interview Sally Longmore, as she works at Woolworths Group as a Digital Product Lead. </p>
+
+    <h4>How would you choose to describe your position at Woolworths Group? What kind of work do you do? </h4>
+    <p>(DPL) Digital Product Lead – lead engineer in team, extends to design such as systems/solutions implemented in environment. Lots of documentation, lots of code, understand company structure, OS deployment, configuration management and learning new things like container management. Wide role, never the same thing day to day</p>
+
+    <h4>What kinds of stakeholders (staff, customers etc.) do you work with on a regular basis? </h4>
+    <p>Usually internal, other teams like networking team, server team, internal customers (other parts of the business, e.g., instore advertising which is responsible for the content)</p>
+    <p>A lot of internal customers, internal teams to deal with, also management. Whenever you're in IT there’s always a project sponsor who brings project forward and takes responsibility</p>
+    <p>Team outsources to vendors, vendor solutions need to be adapted, which can be difficult as vendors have an agenda.</p> 
+    <p>Need to be able to learn quickly </p>
    
     <iframe width="560" height="315" src="https://www.youtube.com/embed/QluN9GP3hzY" title="YouTube video player" frameborder="0"
      allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
