--- a/meetings_recordings.html
+++ b/meetings_recordings.html
@@ -70,7 +70,7 @@
 <!-- page heading-->
     <div class = "main-text">
         <h2>Meetings and recordings</h2>
-    <h3>In Control, Totally, work group meeting recordings. </h3><hr>
+    <h3>In Control, Totally; work group meeting recordings. </h3><hr>
     <p>1st meeting. Getting Started</p>
    
     <iframe width="560" height="315" src="https://www.youtube.com/embed/xrP4VXSXDZ0" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
