updated index page,
added team profiles text

--- a/index.html
+++ b/index.html
@@ -67,7 +67,10 @@
   </div>
 <div class = "main-text">
 
-    <h2>A Group Profile:<h2> 
+    <h2>A Group Profile:</h2> 
+        <p>Individual profiles can be found in the Team profile links above.
+            This information could be helpful to the group because it can increase our understanding of each other and help us achieve clear and effective communication. This understanding of each other is important as before now we have never met each other and being able to work together efficiently as a group is one of the most important parts of success in this assignment. 
+        </p>
         <h2>In Control, Totally </h2>
   <h3>Prepared by: Adam Puckeridge, Aiden Howlett, Helen Andrews, Joshua McCorkell, Robert Longmore and Sean De Chavez </h3>
 
