updates cybersec images format

--- a/IT_tech_cybersecurity.html
+++ b/IT_tech_cybersecurity.html
@@ -85,13 +85,13 @@
     <div class = "main-text">
 
         <p><b>What does it do?</b></p>
-
+        <div class = "main-text">
         <figure class = "figure-style">
         <img src="images/cybersecuritykeyboard.jpg">
         <figcaption>Licenced under CC BY 2.0 © Crown Copyright 2013
             Photographer: Chris Roberts<a href = "https://www.flickr.com/photos/defenceimages/10086117975/in/photolist-gngZtM-25Sn5d6-25Sn4Ec-25Sn4KT-8dyPfo-2nt9dtp-2kSS1nu-25Sn5tM-27fsAgi-24uh8Zj-ro5xU1-27fsvEp-27bnWJC-24uh94s-robQH8-rEx1HA-rmjqPR-ro5DDC-robWeD-robQLe-ro4o1J-qHD6b3-robWgc-rCmnJw-25SiHgx-rECVo8-rmjjTT-qHDbVQ-K7fgtW-27fsyk4-HzQ2J6-27fsBan-25Sn4We-rmjjZ4-24uh997-HzQ46e-25SSH5p-269Lkh1-K7fuB9-robQHt-qi9WAf-qHDbVE-qHRpjT-2b9KhiW-27eY9mt-K76AuE-27eY9uV-q2ocGj-25Sn4Qn-24uMMVS">Secure keyboard image</a></figcaption>
         </figure>
-
+        </div>
         <p>Cyber Security is, simply put, one of the most important parts of the modern world. At a basic level,
             cyber security is preventing unauthorized operations from happening on computer and information systems,
             and in particular, to protect the information and data stored on those systems. Despite seeming so simple,
@@ -123,12 +123,12 @@
 
         <p>Ideally, systems and devices should use multiple or all these methods of authentication. Bank cards use multiple methods: A physical card (only you own), a PIN number (only you know), and to an extent, they also use a third method: your location. Many banks keep track of the locations your card is used and may contact you if your location changes unexpectedly. Websites often have the option of multi-factor authentication: a password (only you know), and your phone (only you own). Many phones have the option of turning on biometrics such as fingerprint scans and facial recognition, which are things that only you are. These principles of the CIA triad and Authentication form the basis of most of cyber security.</p>
 
-
+        <div class = "main-text">
         <figure class = "figure-style">
             <img src="images/cybersecuritymedium.jpg">
             <figcaption>NoDerivs 2.0 Generic (CC BY-ND 2.0)<a href = "https://www.flickr.com/photos/195818920@N07/52159332917/in/photolist-2nt9dtp-qFPWCh-25Sn5d6-25Sn4Ec-25Sn4KT-8dyPfo-2kSS1nu-25Sn5tM-27fsAgi-24uh8Zj-ro5xU1-27fsvEp-rExv9H-27bnWJC-24uh94s-ro5DzE-2kSUTzp-robQH8-rEx1HA-K7fgtW-27fsyk4-HzQ2J6-rmjqPR-27fsBan-ro5DDC-robWeD-25Sn4We-robQLe-ro4o1J-rmjjZ4-qHD6b3-robWgc-rCmnJw-24uh997-rECVo8-rmjjTT-HzQ46e-qHDbVQ-25SSH5p-269Lkh1-K7fuB9-25SiHgx-robQHt-25Sn4Qn-24uMMVS-27fswWc-qi9WAf-qHDbVE-qHRpjT-269LduU">cyber security banner image</a></figcaption>
             </figure>
-
+        </div>
 
         <p><b>What is the likely impact? </b></p>
 
