image size formatting
added div class to match image sizes in Industry data

--- a/Industry_data.html
+++ b/Industry_data.html
@@ -91,12 +91,12 @@
 </ul>
   
 <p><b>Employer demand </b></p>
-
+<div class = "main-text">
 <figure class = "figure-style">
 <img src="images/Pie.png">
 <figcaption>(Source: Labour Insight Jobs (Burning Glass Technologies)) </figcaption>
 </figure>
-
+</div>
 
 
 <p>The career paths which the group have chosen are all in demand positions, as per data sourced from Burning Glass Technologies. This has allowed us to collate and analyse the demand for these positions from employers.</p>
