--- a/Ideal_jobs.html
+++ b/Ideal_jobs.html
@@ -76,163 +76,170 @@
 <!-- page heading-->
     <div class = "main-text">
         <h2>Ideal Jobs</h2>
-    <h3>Helen Andrews</h3><hr>
-    
+        <h3>Helen Andrews</h3><hr>
     </div>
 
 <!--main text-->
 <body class = "main-text">
     <div class = "main-text">
-<p><b>Ideal Jobs</b></p>
-<p>In general, our ideal jobs are all remarkably similar with the exception of Robert. Most of us are looking at going in the direction of being a Software Developer/Engineer. Robert’s ideal job is as a Business Developer. </p>
+        <p><b>Ideal Jobs</b></p>
+        <figure class = "figure-style-40">
+            <img src="images/chart1.png" align="right" width="100%">
+            <figcaption>CHANGE ME!!!!!!!!!</a></figcaption>
+        </figure>
 
-<p><b>What common elements are there, if any?  </b></p>
-<p>The most common element across all our group's ideal jobs is that almost every job has teamwork, problem solving and written and verbal communication skills as a requirement. As most of us are looking at going in the Software Developer/Engineer direction, these jobs all have a deep understanding of writing code as a similarity. </p>
+        <p>In general, our ideal jobs are all remarkably similar with the exception of Robert. Most of us are looking at going in the direction of being a Software Developer/Engineer. Robert’s ideal job is as a Business Developer. </p>
 
-<p><b>What differentiates each position from the others, if anything? </b></p>
-<p>Robert’s ideal job is the only one that is really different as it is a business development job and is not directly related to IT. It has some elements of IT as it is a job that requires technical knowledge of the products that the company makes. The job also requires basic computer skills such as familiarity with Microsoft office.  </p>
-<p>As for the rest of the group, each job has their own specific set of coding/platform skills depending on what type of systems they are using. </p>
+        <p><b>What common elements are there, if any?  </b></p>
+        <p>The most common element across all our group's ideal jobs is that almost every job has teamwork, problem solving and written and verbal communication skills as a requirement. As most of us are looking at going in the Software Developer/Engineer direction, these jobs all have a deep understanding of writing code as a similarity. </p>
 
-<p><b>How similar or different are your career plans across the group? </b></p>
-<p>Most of us have very similar career plans as we are all interested in a job that heavily involves coding, whether that is building websites, games or creating apps. </p>
-<p>Robert is the only one in the group whose job is different as his is a business development role. This role entails finding new customers and identifying ways to grow the business rather than being directly involved in the IT side of the business. </p>
-<hr>
+        <p><b>What differentiates each position from the others, if anything? </b></p>
+        <p>Robert’s ideal job is the only one that is really different as it is a business development job and is not directly related to IT. It has some elements of IT as it is a job that requires technical knowledge of the products that the company makes. The job also requires basic computer skills such as familiarity with Microsoft office.  </p>
+        <p>As for the rest of the group, each job has their own specific set of coding/platform skills depending on what type of systems they are using. </p>
 
+        <p><b>How similar or different are your career plans across the group? </b></p>
+        <p>Most of us have very similar career plans as we are all interested in a job that heavily involves coding, whether that is building websites, games or creating apps. </p>
+        <p>Robert is the only one in the group whose job is different as his is a business development role. This role entails finding new customers and identifying ways to grow the business rather than being directly involved in the IT side of the business. </p>
+        <hr>
 
+        <!-- people parts-->
+        <img src="images/Helenandrews.jpg" align ="right" hspace="10" vspace = '10' width="30%" alt="Helen Andrews"  style="width:240px;height:250px;">
+        <h3>Helen </h3>
+        <p><b>Junior Software Developer </b></p>
+        <p>As a Junior Software Developer in our company, you will help with development work on our primary product. Our goal for this position is to build both our product and your development skills. You will receive training and help develop and support our web-based solutions as part of our enthusiastic dev team </p>
 
-<!-- people parts-->
-<h3>Helen </h3>
-<img src="images/Helenandrews.jpg" align ="right" hspace="10" vspace = '10' width="30%" alt="Helen Andrews"  style="width:240px;height:250px;">
-<p><b>Junior Software Developer </b></p>
-<p>As a Junior Software Developer in our company, you will help with development work on our primary product. Our goal for this position is to build both our product and your development skills. You will receive training and help develop and support our web-based solutions as part of our enthusiastic dev team </p>
+        <p><b>Skills Required </b></p>
+        <ul>
+            <li>Problem solving </li>
+            <li>Strong coding skills </li>
+            <li>Written and Verbal Communication</li>
+            <li>Work well in a team </li>
+            <li>Experience with github </li>
+            <li>Scripting skills in bash and/or Python </li>
+            <li>PHP coding </li>
+            <li>Docker </li>
+        </ul>
+        <hr>
 
-<p><b>Skills Required </b></p>
-<ul>
-    <li>Problem solving </li>
-    <li>Strong coding skills </li>
-    <li>Written and Verbal Communication</li>
-    <li>Work well in a team </li>
-    <li>Experience with github </li>
-    <li>Scripting skills in bash and/or Python </li>
-    <li>PHP coding </li>
-    <li>Docker </li>
-</ul>
-<hr>
+        <img src="images/aidenhowlett.jpg" align ="right" hspace="10" vspace = '10' width="30%" alt="Aiden Howlett" style="width:250px;height:250px;">
+        <h3>Aiden </h3>
+        <p><b>Junior Software Engineer </b></p>
+        <p>Junior software engineers are entry-level members of a software development team. They assist the team with basic tasks under the supervision of their seniors, such as learning base code and writing simple code, and debugging existing software. </p>
 
-<h3>Aiden </h3>
-<p><b>Junior Software Engineer </b></p>
-<img src="images/aidenhowlett.jpg" align ="right" hspace="10" vspace = '10' width="30%" alt="Aiden Howlett" style="width:250px;height:250px;">
-<p>Junior software engineers are entry-level members of a software development team. They assist the team with basic tasks under the supervision of their seniors, such as learning base code and writing simple code, and debugging existing software. </p>
-
-<p><b>Skills Required </b></p>
-<ul>
-    <li>Problem solving </li>
-    <li>Working in a team </li>
-    <li>Written and Verbal Communication</li>
-    <li>Golang </li>
-    <li>React </li>
-    <li>Swift </li>
-    <li>Kotlin </li>
-    <li>GCP (Google Cloud Platform) </li>
-</ul>
-<hr>
-
-
-<h3>Sean</h3>
-<p><b>Video Game Programmer  </b></p>
-<img src="images/seanDechavez.jpg" align ="right" hspace="10" vspace = '10' width="30%" alt="Sean De Chavez"  style="width:150px;height:250px;">
-<p>A Game Developer is a Software Developer who specialises in creating computer or video games. Game Developers may focus on one or more platforms (such as PlayStation, Xbox, Nintendo or PC), or specialise in mobile or handheld game development. They may specialise further in a particular aspect of game development, such as programming the game’s Artificial Intelligence or virtual landscapes. </p>
-
-<p><b>Skills Required </b></p>
-<ul>
-    <li>Coding in C, C++ and C# </li>
-    <li>Working in a team </li>
-    <li>Great verbal, written and interpersonal skills </li>
-    <li>Excellent time management  </li>
-    <li>Able to familiarise quickly with codebases </li>
-    <li>Problem Solving </li>
-    </ul>
-<hr>
-
-<h3>Robert</h3>
-<p><b>Aviation Business Development Manager  </b></p>
-<img src="images/roblongmore.jpg" align="right" hspace="10" vspace = '10' width="30%" alt="Bad landing"  style="width:250px;height:250px;">
-<p>A Business Development Manager is a professional who is responsible for the growth of their department. They work with their sales team to develop mutually beneficial proposals, negotiate contract terms and communicate effectively with stakeholders. A Business Development Manager can also be responsible for identifying and researching new clients and maintaining existing relationships. </p>
-
-<p><b>Skills Required </b></p>
-<ul>
-    <li>Communication skills </li>
-    <li>Negotiation skills </li>
-    <li>Project management </li>
-    <li>Analytical and problem-solving skills </li>
-    <li>Time management </li>
-    <li>Experience with Microsoft's range of office apps </li>
-    <li>great verbal, written and interpersonal skills </li>
-    </ul>
-<hr>
+        <p><b>Skills Required </b></p>
+        <ul>
+            <li>Problem solving </li>
+            <li>Working in a team </li>
+            <li>Written and Verbal Communication</li>
+            <li>Golang </li>
+            <li>React </li>
+            <li>Swift </li>
+            <li>Kotlin </li>
+            <li>GCP (Google Cloud Platform) </li>
+        </ul>
+        <hr>
 
 
-<h3>Joshua</h3>
-<p><b>Web Developer </b></p>
-<img src="images/joshuamccorkell.jpg" align ="right" hspace="10" vspace = '10' width="30%" alt="Joshua McCorkell"  style="width:225px;height:250px;">
-<p>A web developer makes and maintains websites. They are in charge of a site’s overall look and feel. Web developers also handle the technical aspects of a website, including its performance (website speed) and capacity (the maximum amount of traffic the site could handle at a given time). A web developer is usually knowledgeable in both graphic design and programming. </p>
+        <img src="images/seanDechavez.jpg" align ="right" hspace="10" vspace = '10' width="30%" alt="Sean De Chavez"  style="width:150px;height:250px;">
+        <h3>Sean</h3>
+        <p><b>Video Game Programmer  </b></p>
+        <p>A Game Developer is a Software Developer who specialises in creating computer or video games. Game Developers may focus on one or more platforms (such as PlayStation, Xbox, Nintendo or PC), or specialise in mobile or handheld game development. They may specialise further in a particular aspect of game development, such as programming the game’s Artificial Intelligence or virtual landscapes. </p>
 
-<p><b>Skills Required </b></p>
-<ul>
-    <li>Vue.js </li>
-    <li>Bootstrap </li>
-    <li>Tailwind CSS </li>
-    <li>PHP </li>
-    <li>Node.js </li>
-    <li>PrestaShop </li>
-    <li>Joomla </li>
-    <li>Ubuntu/Linux </li>
-    <li>MySQL and SQ Lite </li>
-    <li>Git</li>
-    <li>Docker, Docker Compose and DevOps </li>
-    <li>Software Architecture </li>
-    <li>Project Management </li>
-    <li>Problem Solving </li>
-    <li>Windows and Windows Server </li>
-    <li>Experience with microsoft's range of office apps. </li>
-    <li>Communication Skills </li>
-    <li>Working in a team </li>
-    </ul>
-<hr>
+        <p><b>Skills Required </b></p>
+        <ul>
+            <li>Coding in C, C++ and C# </li>
+            <li>Working in a team </li>
+            <li>Great verbal, written and interpersonal skills </li>
+            <li>Excellent time management  </li>
+            <li>Able to familiarise quickly with codebases </li>
+            <li>Problem Solving </li>
+            </ul>
+        <hr>
+
+        <img src="images/roblongmore.jpg" align="right" hspace="10" vspace = '10' width="30%" alt="Bad landing"  style="width:250px;height:250px;">
+        <h3>Robert</h3>
+        <p><b>Aviation Business Development Manager  </b></p>
+        <p>A Business Development Manager is a professional who is responsible for the growth of their department. They work with their sales team to develop mutually beneficial proposals, negotiate contract terms and communicate effectively with stakeholders. A Business Development Manager can also be responsible for identifying and researching new clients and maintaining existing relationships. </p>
+
+        <p><b>Skills Required </b></p>
+        <ul>
+            <li>Communication skills </li>
+            <li>Negotiation skills </li>
+            <li>Project management </li>
+            <li>Analytical and problem-solving skills </li>
+            <li>Time management </li>
+            <li>Experience with Microsoft's range of office apps </li>
+            <li>great verbal, written and interpersonal skills </li>
+            </ul>
+        <hr>
+
+        <!-- Joshua -->
+
+        <img src="images/joshuamccorkell.jpg" align ="right" hspace="10" vspace = '10' width="30%" alt="Joshua McCorkell"  style="width:225px;height:250px;">
+        <h3>Joshua</h3>
+        <p><b>Web Developer </b></p>
+        <p>A web developer makes and maintains websites. They are in charge of a site’s overall look and feel. Web developers also handle the technical aspects of a website, including its performance (website speed) and capacity (the maximum amount of traffic the site could handle at a given time). A web developer is usually knowledgeable in both graphic design and programming. </p>
+
+        <p><b>Skills Required </b></p>
+        <ul>
+            <li>Vue.js </li>
+            <li>Bootstrap </li>
+            <li>Tailwind CSS </li>
+            <li>PHP </li>
+            <li>Node.js </li>
+            <li>PrestaShop </li>
+            <li>Joomla </li>
+            <li>Ubuntu/Linux </li>
+            <li>MySQL and SQ Lite </li>
+            <li>Git</li>
+            <li>Docker, Docker Compose and DevOps </li>
+            <li>Software Architecture </li>
+            <li>Project Management </li>
+            <li>Problem Solving </li>
+            <li>Windows and Windows Server </li>
+            <li>Experience with microsoft's range of office apps. </li>
+            <li>Communication Skills </li>
+            <li>Working in a team </li>
+            </ul>
+        <hr>
 
 
 
-<h3>Adam</h3>
-<p><b>Full Stack Web Developer </b></p>
-<img src="images/adamuckeridge.jpg" align ="right" hspace="10" vspace = '10' width="30%" alt="Adam Puckeridge" style="width:225px;height:250px;">
-<p>A Full Stack Web Developer is responsible for both the back end and front end of a website or application. This means they can provide end to end service and can be involved in projects that require databases and user interface aspects. They design, develop and maintain a system, website or application. </p>
 
-<p><b>Skills Required </b></p>
-<ul>
-    <li>Experience with Laravel framework, using Laravel to create APIs </li>
-    <li>Experience with commercial experience </li>
-    <li>Experience working with large data sets, and databases </li>
-    <li>Experience with VueJS 2/3, Innertia JS is desirable </li>
-    <li>Tertiary qualifications in relevant field are desirable but not mandatory </li>
-    <li>Flexible attitude and able to work in fast-paced environment </li>
-    <li>Ability to work autonomously as part of a small team</li>
+        <img src="images/adamuckeridge.jpg" align ="right" hspace="10" vspace = '10' width="30%" alt="Adam Puckeridge" style="width:225px;height:250px;">
+        <h3>Adam</h3>
+        <p><b>Full Stack Web Developer </b></p>
+        <p>A Full Stack Web Developer is responsible for both the back end and front end of a website or application. This means they can provide end to end service and can be involved in projects that require databases and user interface aspects. They design, develop and maintain a system, website or application. </p>
+
+        <p><b>Skills Required </b></p>
+        <ul>
+            <li>Experience with Laravel framework, using Laravel to create APIs </li>
+            <li>Experience with commercial experience </li>
+            <li>Experience working with large data sets, and databases </li>
+            <li>Experience with VueJS 2/3, Innertia JS is desirable </li>
+            <li>Tertiary qualifications in relevant field are desirable but not mandatory </li>
+            <li>Flexible attitude and able to work in fast-paced environment </li>
+            <li>Ability to work autonomously as part of a small team</li>
         </ul>
 
 
-<hr>
     </div>
-    </body>
+</body>
     <!--footer-->
 <footer>
     <div>
-        <p><a class = "footer" href = "Adam_puckeridge.html">Adam Puckeridge</a> | 
+        <p>
+            <a class = "footer" href = "Adam_puckeridge.html">Adam Puckeridge</a> | 
             <a class = "footer" href = "Aiden_howlett.html">Aiden Howlett</a> | 
             <a class = "footer" href = "Helen_Andrews.html">Helen Andrews</a> | 
             <a class = "footer" href = "Joshua_McCorkell.html">Joshua McCorkell</a> | 
             <a class = "footer" href = "Robert_Longmore.html">Robert Longmore</a> | 
-            <a class = "footer" href = "Sean_De_Chavez.html">Sean De Chavez</a></p>
-        <p><a class = "footer" href ="https://github.com/aidenh37/RMIT-COSC2196-IIT-A2">Github Public Repository</a> | 
-            <a class = "footer" href = "https://aidenh37.github.io/RMIT-COSC2196-IIT-A2">Gitub Website</a></p>
+            <a class = "footer" href = "Sean_De_Chavez.html">Sean De Chavez</a>
+        </p>
+        <p>
+            <a class = "footer" href ="https://github.com/aidenh37/RMIT-COSC2196-IIT-A2">Github Public Repository</a> | 
+            <a class = "footer" href = "https://aidenh37.github.io/RMIT-COSC2196-IIT-A2">Gitub Website</a>
+        </p>
         © 2022 In Control Totally
     </div>
 </footer>
