--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <!--top graphic-->
 <head><img src="images/Banner.png" alt = "In control totally logo" class = "banner-logo"></head>
 
-<body class = "main-text">
+<!--<body class = "main-text"-->
 <!--top navigation bar-->
   
 <div class="topnav">
